fix image stretching on oss projects

--- a/_sass/_oss_projects.scss
+++ b/_sass/_oss_projects.scss
@@ -17,7 +17,7 @@
       margin-top: 1rem;
     }
     img {
-      height: 5rem;
+      width: 7rem;
     }
     p {
       margin-top: 0rem;
